[package]
name = "word_game"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.22", features = ["default", "blocking", "json"] }
iced = { version = "0.13.1", features = ["auto-detect-theme", "default", "advanced"]}
serde = { version = "1.0.219", features = ["derive"] }
rand = "0.9.2"
log = "0.4.27"