[package]
name = "word_game"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/berbenzuel/word_game"

[dependencies]
reqwest = { version = "0.12.22", features = ["default", "blocking", "json"] }
iced = { version = "0.13.1", features = ["auto-detect-theme", "default", "advanced"]}
serde = { version = "1.0.219", features = ["derive"] }
rand = "0.9.2"
log = "0.4.27"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[package.metadata.dist]
targets = [
    "x86_64-unknown-linux-gnu",
    "x86_64-pc-windows-msvc"
]